<resources>
    <string name="app_name">BeSeen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_ally">AddAlly</string>
    <string name="nameInput">Name</string>
    <string name="add_ally_title">Add Ally</string>
    <string name="give_ally_this_code">Give ally this code:</string>
    <string name="my_code_placeholder">1234ABC</string>
    <string name="enter_their_code">Enter their code here:</string>
    <string name="add_button_text">Add</string>
    <string name="default_ally_name">Default Name</string>

    <string name="title_activity_allies_screen">Allies</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login">Login</string>

    <string name="register_title">Be Seen Registration</string>
    <string name="login_title">Be Seen\nLogin</string>
    <string name="password_hint">Password</string>
    <string name="reenter_password_hint">Confirm Password</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="email_hint">Email</string>
    <string name="go_to_login">Go to Login</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <string name="go_to_registration">Register</string>

    <string name="error_prefix">Error: </string>
    <string name="error_no_email">email was not input.</string>
    <string name="error_no_password">password was not input</string>
    <string name="error_password_too_short">the password given was too short.</string>
    <string name="error_incorrect_login">login details are not registered.</string>
    <string name="error_password_mismatch">passwords do not match.</string>
    <string name="error_no_phoneNo">no phone number was given.</string>
    <string name="error_no_usercode">no usercode was set.</string>
    <string name="error_no_allycode">no ally code was input.</string>
    <string name="error_no_username_set">no username is set.</string>
    <string name="error_incorrect_ally_code">the ally code was incorrect.</string>
    <string name="error_no_name">"no ally name was given."</string>

    <string name="hint_password_length">It mut be at least %d characters long.</string>

</resources>
