<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_ally"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sam.beseen.AddAlly"
    tools:showIn="@layout/activity_add_ally"
    android:background="@android:color/black">

    <TextView
        android:text="@string/add_ally_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addAllyTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:text="Add Ally"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/addAllyButton"
        android:layout_alignStart="@+id/addAllyButton" />

    <TextView
        android:text="@string/give_ally_this_code"
        android:layout_height="wrap_content"
        android:id="@+id/giveAllyCode"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/enterAllyName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/enter_their_code"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/giveCodeLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_below="@+id/userCode"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/add_button_text"
        android:layout_height="wrap_content"
        android:id="@+id/addAllyButton"
        android:layout_marginTop="19dp"
        android:layout_width="160dp"
        android:layout_below="@+id/allyCode"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/enterAllyName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:layout_marginTop="13dp"
        android:hint="@string/nameInput"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/addAllyTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/my_code_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userCode"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/giveAllyCode"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/allyCode"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:background="@android:color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_width="180dp"
        android:layout_below="@+id/giveCodeLabel"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
