<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sam.beseen.Registration"
    tools:showIn="@layout/activity_registration"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/registerTitle"
        android:text="@string/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:text="@string/register_title"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text=""
        android:ems="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:hint="@string/email_hint"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/registerTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text=""
        android:ems="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:hint="@string/password_hint"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/enterEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/reenterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text=""
        android:ems="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:hint="@string/reenter_password_hint"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/enterPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text=""
        android:ems="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:hint="@string/phone_number_hint"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/reenterPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_below="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:textColor="@color/colorError"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/registerButton"
        android:text="@string/register_button"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="45dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/goToLoginButton"
        android:text="@string/go_to_login"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignBaseline="@+id/registerButton"
        android:layout_alignBottom="@+id/registerButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="7dp" />

</RelativeLayout>
